force-app/main/default/objects/Deal_Registration__c/Deal_Registration__c.object-meta.xml
<CustomObject>
    <label>Deal Registration</label>
    <pluralLabel>Deal Registrations</pluralLabel>
    <nameField>
        <label>Deal Registration Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores partner deal registration records that are automatically synchronized to Opportunity records.</description>
</CustomObject>