force-app/main/default/objects/Deal_Registration__c/fields/Deal_Description__c.field-meta.xml
<CustomField>
    <fullName>Deal_Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>A description of the deal. Maps to Opportunity Description.</description>
</CustomField>