force-app/main/default/objects/Deal_Registration__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <description>Deal registration description</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>