force-app/main/default/objects/Deal_Registration__c/fields/Estimated_Deal_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Deal_Value__c</fullName>
    <label>Estimated Deal Value</label>
    <description>Estimated value of the deal</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>