force-app/main/default/objects/Deal_Registration__c/fields/Linked_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Linked_Opportunity__c</fullName>
    <label>Linked Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deal Registrations</relationshipLabel>
    <relationshipName>Deal_Registrations</relationshipName>
    <description>Bi-directional link to the automatically created Opportunity record.</description>
</CustomField>