force-app/main/default/objects/Deal_Registration__c/fields/Primary_Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Partner_Contact__c</fullName>
    <label>Primary Partner Contact</label>
    <description>Primary contact at the partner organisation. Maps to Opportunity Primary_Contact__c.</description>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Registrations</relationshipLabel>
    <relationshipName>Primary_Partner_Deal_Registrations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>