force-app/main/default/objects/Deal_Registration__c/fields/Projected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Close_Date__c</fullName>
    <label>Projected Close Date</label>
    <description>Partner-estimated close date for the deal. Maps to Opportunity CloseDate.</description>
    <type>Date</type>
</CustomField>